@@ -20,6 +20,8 @@
 
 * Added a Gaffer.OpMatcher class, to provide lists of ops which are suitable for application to particular objects.
 
+* Added a contextMenuSignal() to the Widget class.
+
 0.30.0
 ------
 * Fixed problem trying to call QLineEdit.setPlaceholderText within Nuke.
